--- a/themes/pico_portfolio/css/sass/_type.scss
+++ b/themes/pico_portfolio/css/sass/_type.scss
@@ -41,30 +41,27 @@ a:visted {
 	color: $link-followed-color;
 }
 
-.taginfo {
+.taginfo, .portfolioitemtaglist {
 	font-family: $sub-heading-font-stack;
 	font-size: 1em;
 	line-height: 1em;
 	font-weight: 300;
 }
 
-.tagselect {
+.tagselect, .itemtag {
 	display: inline-block;
 	text-decoration: none;
 	@include border-radius(4px);
-	background-color: #7cb4f5;
-	border: 1px solid #639cdc;
+	background-color: $tag-bg;
+	border: 1px solid $tag-border;
 	padding: 0.2em 0.4em;
-	color: white;
+	color: $tag-text;
 	font-weight: 400;
+	&:hover {
+		text-decoration: none;
+		background-color: $tag-hover;
+	}
 }
-
-.tagselect:hover {
-	text-decoration: none;
-	background-color: #639cdc;
-}
-
-
 
 .nav li {
 	font-family: $sub-heading-font-stack;
