--- a/themes/pico_portfolio/css/sass/_variables.scss
+++ b/themes/pico_portfolio/css/sass/_variables.scss
@@ -9,6 +9,12 @@ $main-heading-color: #000000;
 $sub-heading-color: #000000;
 $link-color: #0023e1;
 $link-followed-color: #4758bd;
+$portfolio-item-bg-color: #eeeeee;
+$tag-text: #f0f0f0;
+$tag-bg: #595959;
+$tag-border: #4e4e4e;
+$tag-hover: #767676;
+$separator-line: #e3e3e3;
 
 // Font Stacks
 $main-text-font-stack: 'Playfair Display', 'Merriweather', Georgia, 'Times New Romain', Times, Serif;
