--- a/themes/pico_portfolio/css/style.css
+++ b/themes/pico_portfolio/css/style.css
@@ -420,28 +420,27 @@ a:hover {
 a:visted {
   color: #4758bd; }
 
-.taginfo {
+.taginfo, .portfolioitemtaglist {
   font-family: "Montserrat", "Merriweather Sans", Helvetica, Arial, serif;
   font-size: 1em;
   line-height: 1em;
   font-weight: 300; }
 
-.tagselect {
+.tagselect, .itemtag {
   display: inline-block;
   text-decoration: none;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   border-radius: 4px;
-  background-color: #7cb4f5;
-  border: 1px solid #639cdc;
+  background-color: #595959;
+  border: 1px solid #4e4e4e;
   padding: 0.2em 0.4em;
-  color: white;
+  color: #f0f0f0;
   font-weight: 400; }
-
-.tagselect:hover {
-  text-decoration: none;
-  background-color: #639cdc; }
+  .tagselect:hover, .itemtag:hover {
+    text-decoration: none;
+    background-color: #767676; }
 
 .nav li {
   font-family: "Montserrat", "Merriweather Sans", Helvetica, Arial, serif;
@@ -469,7 +468,7 @@ a:visted {
   text-align: center; }
   .nav li {
     display: inline;
-    border-right: 1px solid black;
+    border-right: 1px solid #333333;
     padding: 0 0.5em; }
   .nav li:last-child {
     border-right: none; }
@@ -479,23 +478,21 @@ a:visted {
   margin: 0 -20px 0 0; }
 
 .portfolioitem {
-  background-color: #eeeeee;
-  float: left;
-  display: inline;
-  margin-left: 0;
-  margin-right: 20px;
+  display: inline-block;
   width: 340px;
+  vertical-align: top;
+  background-color: #eeeeee;
+  margin-right: 20px;
   margin-bottom: 2em; }
   .portfolioitem img {
     max-width: 100%; }
-  .portfolioitem:nth-child(3n+1) {
-    clear: both; }
 
 .taginfo {
-  border-top: 1px solid #bbbbbb;
-  border-bottom: 1px solid #bbbbbb;
+  border-top: 1px solid #e3e3e3;
+  border-bottom: 1px solid #e3e3e3;
   margin-bottom: 2em; }
 
 footer {
+  border-top: 1px solid #e3e3e3;
   clear: all;
   padding: 2em 0; }
